main.scss: Adds overflor-y: auto to html tag to avoid double scrollbars

--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -1,3 +1,6 @@
+html {
+  overflow-y: auto;
+}
 #app {
   font-family: sans-serif;
   font-style: normal;
